--- a/style.css
+++ b/style.css
@@ -20,9 +20,26 @@ body {
 input {
   background: rgba(82, 154, 205);
   color: rgb(234, 234, 234);
+  border: 1px solid;
 }
 
 label {
   display: block;
   font-size: 12px;
+}
+
+select {
+  border: 1px solid white;
+  background: rgba(82, 154, 205);
+  outline: none;
+}
+
+option {
+  font-family: arial, sans;
+  color: rgb(234, 234, 234);
+}
+
+textarea {
+  border-color: white;
+  background: rgba(82, 154, 205);
 }
