--- a/style.css
+++ b/style.css
@@ -6,10 +6,15 @@ form {
 fieldset {
   border: none;
   background: rgba(82, 154, 205);
+  width: 320px;
+  height: 450px;
+  margin: auto;
 }
+
 body {
   color: rgb(234, 234, 234);
   font-family: arial, sans;
+  font-size: 12px;
 }
 
 ::placeholder {
@@ -21,17 +26,28 @@ input {
   background: rgba(82, 154, 205);
   color: rgb(234, 234, 234);
   border: 1px solid;
+  width: 300px;
+  height: 25px;
+  font-size: 12px;
+  padding-left: 5px;
 }
 
 label {
   display: block;
   font-size: 12px;
+  padding: 10px 0px 5px;
 }
 
 select {
   border: 1px solid white;
+  border-size: 2px;
   background: rgba(82, 154, 205);
   outline: none;
+  width: 300px;
+}
+
+select:focus {
+  outline: 2px solid green;
 }
 
 option {
@@ -41,5 +57,11 @@ option {
 
 textarea {
   border-color: white;
+  border-style: solid;
   background: rgba(82, 154, 205);
+  width: 300px;
+  height: 100px;
+}
+textarea:focus {
+  outline: 2px solid green;
 }
